# aoc24

./: .gitignore  CMakeLists.txt
d1/: main.cxx
d10/: main.cxx
d11/: main.cxx
d12/: main.cxx
d13/: main.cxx
d14/: main.cxx
d15/: main.cxx
d16/: main.cxx
d17/: main.cxx
d18/: main.cxx
d19/: main.cxx
d2/: main.cxx
d20/: main.cxx
d3/: main.cxx
d4/: main.cxx
d5/: main.cxx
d6/: main.cxx
d7/: main.cxx
d8/: main.cxx
d9/: main.cxx
